@@ -2,6 +2,7 @@ amaroK Changelog
 ==================
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
+  * fix: libamarokarts detection code
   * add: added long-awaited DCOP methods for manipulating the playback. This also adds
          integration with kdeaddons/kicker-applets/mediacontrol.
   * chg: moved DCOP handler to a separate class/file
